--- a/.github/ISSUE_TEMPLATE/Bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug_report.yml
@@ -1,22 +1,25 @@
 name: Bug Report
 description: Fehlermeldungen für das Finance Estate CRM der Estate of the Art AG
 body:
-  - type: markdown
+  - type: textarea
     id: description
     attributes:
-      value: "Beschreibung"
+      label: "Beschreibung"
+      description: "Beschreibe den Fehler möglichst genau und präzise"
     validations:
       required: true
-  - type: markdown
+  - type: textarea
     id: expected
     attributes:
-      value: "Erwartetes Verhalten"
+      label: "Erwartetes Verhalten"
+      description: "Was hätte stattdessen passieren sollen?"
     validations:
       required: true
-  - type: markdown
+  - type: textarea
     id: reproduce
     attributes:
-      value: "Wiederholt sich dieser Fehler?"
+      label: "Wiederholt sich dieser Fehler?"
+      description: "Erkläre wie dieser Fehler reproduziert werden kann"
     validations:
       required: true
   - type: "checkboxes"
