--- a/.github/ISSUE_TEMPLATE/Bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug_report.yml
@@ -1,5 +1,8 @@
 name: Bug Report
 description: Fehlermeldungen für das Finance Estate CRM der Estate of the Art AG
+title: "[Fehler]: "
+labels: ["bug", "triage"]
+projects: ["Estate-of-the-Art/finance-estate", "Estate-of-the-Art/finance-estate-issues"]
 body:
   - type: textarea
     id: description
